<resources>
    <string name="nav_header_title">Fruit Doctor</string>
    <string name="nav_header_subtitle">Designed &amp; Developed by AGTRAIN Trading</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_about_agtrain">About AgTrain</string>
    <string name="menu_about_hort_life_project">About Horti-Life Project</string>
    <string name="menu_references">References</string>
    <string name="tab_text_1">Description</string>
    <string name="tab_text_2">Products</string>
    <string name="tab_text_3">Images</string>
    <string name="pest">Pest</string>
    <string name="disease">Disease</string>
    <string name="disorder">Disorder</string>
    <string name="app_name">Fruit Doctor</string>
    <string name="developedBy_For_Splash">By AgTrain Trading P.L.C</string>
    <string name="contact_info"><b>AgTraIn plc</b>,\t agtraintrading@gmail.com, info@agtraintrading.com.et, andnetbay@gmail.com</string>
    <string name="action_settings">Change Language</string>
    <string name="choose_Language">Choose Language....</string>
    <string name="For_more_information">For more information, contact:</string>
    <string name="numberOfElement">available problem list = </string>
    <string name="recommendation_Title1_Disease">Integrated Disease Management Recommendation</string>
    <string name="recommendation_Detail">Recommendation Detail Information</string>
    <string name="efficacyTitle">List of Effective Products</string>
    <string name="note_Title">Before you apply the recommended pesticides, Note the following points!</string>
    <string name="note">Use recommended and registered chemicals\n\n
    To prevent resistance development, rotate chemical mode of action groups.\n\n
    Prevent resistance development by rotating chemical mode of action groups.\n\n
    About rate of application, follow the label instructions given by the manufacturing company and local suppliers.\n\n
    Consider the crop type, the growth stage and spraying time, apply sufficient volume of water to ensure thorough coverage.\n\n
    Give attention how to use the personal protection equipment, re-entry period, pre-harvest interval (PHI) and other pertinent instructions and warnings.\n\n
    For better result, please consult your local specialist.
</string>
    <string name="popup_btn_Okay">Okay!</string>
    <string name="references_Title">References</string>
    <string name="references">
\n\n Ahuja D B and Chattopadhyay C 2015: Pests of Fruit Trees (Citrus, Banana, Mango, Pomegranate and Sapota) E-Pest Surveillance and Pest Management Advisory, publishers ICAR-National Research Centre for Integrated Pest Management, New Delhi and State Department of Horticulture, Commissionerate of Agriculture, Pune (Maharashtra): 124
\n\nAvocado Production Guideline Technical Brochure, SNV Netherlands Development organization
\n\n Banana Production Guideline Technical Brochure, SNV Netherlands Development organization
\n\n Mango Production Guideline Technical Brochure, SNV Netherlands Development organization
\n\n Papaya Production Guideline Technical Brochure, SNV Netherlands Development organization
\n\n https://www.plantwise.org Plantwise Knowledge Bank © Copyright 2022 CAB International.
Centre for Agriculture and Bioscience International (CABI, sometimes also referred to as CAB International), a UK-based nonprofit inter-governmental organization for scientific research and publishing on agriculture and the environment.
</string>
    <string name="title_activity_about_Agtrain_title">About AgTraIn</string>
    <string name="detailInfo_about_Agtrain">
AgTraIn PLC (Agricultural Transformation by Innovation) is a privately owned Ethiopian Company registered in Ethiopia. The company is working mainly on developing and delivering technological products and services for the agricultural sector.\n
        The company focus on developing technological supporting tools for the two main farming components in the agricultural sector, smallholder farmers and export-oriented farms. \n\n AgTraIn is working to support the existing extension service by developing offline mobile applications to support
smallholder farmers. The present app is focusing on the Integrated Pest Management (IPM) practices of the pest, disease, and disorders of most commonly growing 4 Fruits. This will help farmers and extension agents to get timely advice by reading and comparing with the pictures. It helps them manage the risks accordingly and thereby increase yield.

</string>
    <string name="title_activity_about_HortiLife_Title">About Horti-Life Project</string>
    <string name="title_activity_about_HortiLife">The Horti-LIFE project aim to address issues of low productivity
        and the high pressure from pests and diseases that horticultural smallholders are facing by
        establishing Farmer Field Schools (FFS) to capacitate smallholders to adapt Good Agricultural
        Practices (GAP) and Integrated Pest Management (IPM) practices in their horticultural production.
        \n\nThe reader of the provided INFORMATION in this current mobile application agrees that any
        risk of any kind from any use of the provided INFORMATION rests entirely and completely with
        the reader. \n\nIn no event will SNV Horti LIFE or its employees be liable for any damage or
        punitive damages arising out of the use of or inability to use the INFORMATION included in
        THE PRESENT mobile application. Prior to any use of data FROM THE PRESENT mobile application,
        you are advised to consult with your local experts, to verify and validate the applicability of
        the retrieved INFORMATION. There are no warranties as to the results obtained from the use of the
        information included in the PRESENT mobile application.
</string>
    <string name="about_Title">Ethiopian Fruit Insect Pests and Disease Guide</string>
    <string name="about_Detail_Information"><b>FruitDr provides you information for fruit pest, diseases and disorders. </b> The app includes 4 fruit crops which Horti-LIFE project is
        working on (Avocado, Banana, Mango and Papaya). The app contains information on 9 pests\',
       17 diseases\', and 5 disorders\' images of the symptoms, IPM recommendations and lists
        products that are considered effective for control. \n\n Recommendations are based on information
        on the manufacturer\'s label and performance data from research and Extension trials from the
        Farmers Field School. \n\n Fruit Dr is developed by AgTraIn PLC, and funding provided by the Horti-LIFE project of SNV Netherlands Development Organization.
    </string>
    <string name="msg_no_product_found">
        There are no specific methods of control, so contact your local agronomist and try to control it by implementing better prevention and control methods.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>