<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_about_agtrain"
            android:icon="@drawable/ic_baseline_bubble_chart_24"
            android:title="@string/menu_about_agtrain" />

        <item
            android:id="@+id/nav_about_hort_life_project"
            android:icon="@drawable/ic_baseline_grass_24"
            android:title="@string/menu_about_hort_life_project" />

        <item
            android:id="@+id/nav_references"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_references" />

<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>