<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/product_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/recommendationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_Title"
            android:ellipsize="middle"
            android:layout_margin="8dp"
            android:paddingTop="12dp"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:paddingBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/efficacyTitle"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="32dp"
        tools:ignore="UseCompoundDrawables"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/caution"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:textColor="@color/warning_text"
            android:lineSpacingExtra="4dp"
            android:text="@string/msg_no_product_found"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5"/>
    </LinearLayout>
</LinearLayout>