<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReferencesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/references_Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/primaryDarkColor"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/aboutInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:paddingTop="12dp"
                android:text="@string/references"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:id="@+id/contact_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/For_more_information"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/primaryDarkColor"
                android:textColorLink="@color/secondaryLightColor"
                />
            <TextView
                android:id="@+id/contact_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/primaryDarkColor"
                android:textColorLink="@color/secondaryLightColor"
                android:layout_marginBottom="12dp"

                />


        </TableLayout>



    </androidx.core.widget.NestedScrollView>


</FrameLayout>